# VaultMind

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: banner.html  icon.html
benchmarks/: contradict_eval.yaml  golden.yaml
config/: default.toml  sources.toml
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  configuration.md  knowledge-graph.md  mcp-integration.md  pkm-design.md  telegram-bot.md  zettelkasten-maturation.md
docs/adr/: 0001-curated-memory-and-autonomy-boundaries.md  0002-integration-capability-and-outbound-approval-model.md
src/vaultmind/: __init__.py  cli.py  config.py  errors.py
src/vaultmind/bench/: __init__.py  fixture_store.py  golden.py  llm_score.py  runner.py  trend.py
src/vaultmind/bot/: __init__.py  (+10 more)
templates/: capture.md  daily-note.md  project.md
tests/: test_activation.py  test_auto_tagger.py  test_autonomy.py  test_bm25.py  test_bookmark.py  test_capture.py  test_clustering.py  test_composite_ranking.py  test_config.py  test_consolidation.py  test_contradiction_detection.py  test_contradiction_escalation.py  test_contradiction_marking.py  test_contradiction_policy.py  test_cron.py  test_date_resolution.py  test_delete_handler.py  test_digest.py  test_distill.py  test_distill_command.py  test_duplicate_detector.py  test_edit_handler.py  test_embedding_cache.py  test_episodic.py  test_episodic_thinking.py  test_errors.py  test_event_loops.py  test_evolution.py  test_extraction_parser.py  test_formatter.py  test_gaps.py  test_graph.py  test_graph_context.py  test_graph_maintenance.py  test_graph_methods.py  test_health.py  test_hybrid.py  test_importance.py  test_inbox_triage.py  test_ingest.py  (+35 more)
tests/bench/: test_fixture_store.py  test_golden.py  test_llm_score.py  test_runner.py  test_trend.py
tests/export/: test_okf.py
tests/sources/: test_github_activity.py  test_pipeline.py  test_registry.py  test_rss.py  test_youtube_channel.py
(+118 files in other folders)
